1.2.5i5:
    Core & Setup:
    * 1012 Fix quoting of backslashes in custom checks with nagios core...
            NOTE: Please refer to the migration notes!
    * 1038 Massive speedup of cmk --snmptranslate
    * 1035 FIX: Do not fail on errors in *.mk files anymore - except in interactive mode...
    * 0174 FIX: FIX: Fixed appending of --keepalive-fd parameters to checkhelps...

    Checks & Agents:
    * 0168 f5_bigip_pool: Added Wato configuration...
    * 0995 raritan_pdu_outletcount: new check for outlet count of Raritan PX-2000 family PDUs
    * 0169 websphere_mq_channels,ebsphere_mq_queues: New Checks to monitor IBM Websphere MQ Queues and Channels...
    * 1034 Always provide also 64 bit version of Windows agent
    * 0170 hp_proliant_power: New check to monitor the Power Meter on Prolaint Servers and iLO Boards
    * 0997 New checks and an special agent for ALLNET IP Sensoric devices...
    * 0172 zfsget: Check is now usable in cluster_mode...
    * 1039 aix_diskiod: new check for disk IO on AIX
    * 0994 FIX: agent plugin smart: fixed syntax error
    * 0989 FIX: logwatch.ec: Fix forwarding multiple messages via syslog/TCP...
    * 0943 FIX: if.include: fixed incorrect traffic percentage values in the check output of if checks...
    * 0944 FIX: oracle_tablespaces: fixed calculation of space left and number of remaining increments...
    * 1032 FIX: check_traceroute: Fix option Use DNS, worked vice versa
    * 0171 FIX: hp_blade_psu: Fixed pnp template...
    * 0996 FIX: apc_symmetra_test: Handle unknown date of last self test as intended...
    * 0173 FIX: hitachi_hnas_volume: Fixed bug when snmp outputs empty lines
    * 1037 FIX: bintec_info: support bintec RXL12500
    * 0948 FIX: mk_inventory.ps1: increased caching time to 14400, fixed incorrect default cachefile path

    Multisite:
    * 1013 Sort host names naturally, e.g. foobar11 comes after foobar2...
    * 1033 New Mutisite filter for the number of services a host has...