@@ -1,0 +1,8 @@
+Title: logwatch.groups: New logwatch subcheck who can be used to group logfiles together.
+Level: 1
+Component: checks
+Version: 1.2.5i5
+Date: 1404305698
+Class: feature
+
+
