@@ -4,7 +4,7 @@
             NOTE: Please refer to the migration notes!
     * 1038 Massive speedup of cmk --snmptranslate
     * 1035 FIX: Do not fail on errors in *.mk files anymore - except in interactive mode...
-    * 0174 FIX: FIX: Fixed appending of --keepalive-fd parameters to checkhelps...
+    * 0174 FIX: Fixed appending of --keepalive-fd parameters to checkhelpers...
 
     Checks & Agents:
     * 0168 f5_bigip_pool: Added Wato configuration...
@@ -12,9 +12,10 @@
     * 0169 websphere_mq_channels,ebsphere_mq_queues: New Checks to monitor IBM Websphere MQ Queues and Channels...
     * 1034 Always provide also 64 bit version of Windows agent
     * 0170 hp_proliant_power: New check to monitor the Power Meter on Prolaint Servers and iLO Boards
-    * 0997 New checks and an special agent for ALLNET IP Sensoric devices...
     * 0172 zfsget: Check is now usable in cluster_mode...
     * 1039 aix_diskiod: new check for disk IO on AIX
+    * 0997 New checks and an special agent for ALLNET IP Sensoric devices...
+    * 0175 logwatch.groups: New logwatch subcheck who can be used to group logfiles together.
     * 0994 FIX: agent plugin smart: fixed syntax error
     * 0989 FIX: logwatch.ec: Fix forwarding multiple messages via syslog/TCP...
     * 0943 FIX: if.include: fixed incorrect traffic percentage values in the check output of if checks...
